# utfpr-icsi30-trabalho

./: .gitignore  pyproject.toml
datasets/data_10v_12x12/: env_config.txt
datasets/data_300v_90x90/: env_config.txt
datasets/data_42v_20x20/: env_config.txt
src/: main.py
src/agents/: explorer.py  rescuer.py
src/algorithms/: stack.py
src/algorithms/queue/: priority_queue.py  priotirized_item.py
src/algorithms/search/offline/: a_star.py  bfs.py
src/core/: map.py
src/utils/: types.py
src/vs/: constants.py  environment.py
